--- a/scss/components/_tag.scss
+++ b/scss/components/_tag.scss
@@ -4,4 +4,5 @@
 
     padding: 0.5rem 1rem;
     border-radius: 50rem;
+    white-space: nowrap;
 }
